<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <Button
            android:id="@+id/WaterButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/water_layout"
            android:textSize="35sp" />

        <Button
            android:id="@+id/GasButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gas_layout"
            android:textSize="35sp" />
        
        <Button
            android:id="@+id/RubbishButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rubbish_layout"
            android:textSize="35sp" />

        <Button
            android:id="@+id/ElectricityButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/electricity_layout"
            android:textSize="35sp" />

        <Button
            android:id="@+id/PhoneButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_layout"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/tvOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Medium Text"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
    </LinearLayout>

</RelativeLayout>